; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/sockets/unix_bindconnect/extr_unix_bindconnect.c_unwind.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/sockets/unix_bindconnect/extr_unix_bindconnect.c_unwind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@unwind_len = common dso_local global i32 0, align 4
@unwind_list = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @unwind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unwind() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @unwind_len, align 4
  %3 = sub nsw i32 %2, 1
  store i32 %3, i32* %1, align 4
  br label %4

4:                                                ; preds = %22, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp sge i32 %5, 0
  br i1 %6, label %7, label %25

7:                                                ; preds = %4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @unwind_list, align 8
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @unlink(i32 %13)
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @unwind_list, align 8
  %16 = load i32, i32* %1, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @rmdir(i32 %20)
  br label %22

22:                                               ; preds = %7
  %23 = load i32, i32* %1, align 4
  %24 = add nsw i32 %23, -1
  store i32 %24, i32* %1, align 4
  br label %4

25:                                               ; preds = %4
  ret void
}

declare dso_local i32 @unlink(i32) #1

declare dso_local i32 @rmdir(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
